# cortex

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  project-context.md  project-overview.md  setup.sh
agents/: project-context.md.template
changelog/: 0.1.0.md  0.1.1.md  0.1.2.md  0.2.0.md  0.2.2.md
deploy/: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  cortex-mcp.json.example  cortex-webhook.json.example  dbhub.json.example
docs/: creating-a-theme.md  extending-layers.md  getting-started.md
mcp/: .gitignore  README.md  cortex_jsm_mcp.py  pyproject.toml
runtime/: .env.local.example  .gitignore  README.md  pyproject.toml
runtime/cortex_runtime/: __init__.py  __main__.py  admin.py  agent_client.py  api.py  app.py  auth.py  auth_policy.py  budget.py  context.py  demo_model.py  ephemeral.py  job_queue.py  local_tools.py  loop.py  resolver.py  run.py  runtime.py  safety.py  secret_provider.py  security_gate.py  session.py  state_store.py  tools.py
runtime/docs/: claude-cli-setup.md
runtime/tests/: test_admin.py  test_agent_client.py  test_api.py  test_api_async.py  test_api_integration.py  test_api_security.py  test_api_webhook.py  test_app.py  test_auth.py  test_auth_policy.py  test_budget.py  test_context.py  test_ephemeral.py  test_firewall.py  test_job_queue.py  test_loop.py  test_parity.py  test_resolver.py  test_run.py  test_runtime.py  test_safety.py  test_secret_provider.py  test_security_gate.py  test_session.py  test_state_store.py
runtime/tests/fixtures/host/: project-context.md
runtime/tests/fixtures/host/agents/personalities/h2g2/: characters.md  theme.md
runtime/tests/fixtures/host/agents/roles/engineering/: lead-backend.md
runtime/tests/fixtures/host/agents/workflows/engineering/: code-review.md
runtime/tests/fixtures/host/cortex/agents/capabilities/languages/: php.md  typescript.md
runtime/tests/fixtures/host/cortex/agents/personalities/h2g2/: Hactar.md  characters.md  theme.md
runtime/tests/fixtures/host/cortex/agents/roles/engineering/: lead-backend.md
runtime/tests/fixtures/host/cortex/agents/workflows/engineering/: code-review.md
runtime/tests/fixtures/host/svc-a/: project-overview.md
runtime/tests/fixtures/host/svc-a/agents/capabilities/languages/: php.md
runtime/tests/fixtures/host/svc-a/agents/roles/engineering/: lead-backend.md
templates/: bootstrap-instructions-workspace.md  bootstrap-instructions.md  copilot-instructions-workspace.md  copilot-instructions.md  (+3 more)
(+105 files in other folders)
