[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-jsm-mcp"
version = "0.1.0"
description = "Cortex MCP server: read a JSM issue + post a true public:false internal comment."
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.scripts]
cortex-jsm-mcp = "cortex_jsm_mcp:main"

[tool.setuptools]
py-modules = ["cortex_jsm_mcp"]
