[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-runtime"
version = "0.0.1"
description = "Deployable engine that compiles the Cortex cascade (ADR-001) into an executable resolver + agnostic API (ADR-002)."
requires-python = ">=3.11"
readme = "README.md"
# Kept intentionally lean — the runtime ASSEMBLES mature components (ADR-002 Build vs Buy).
dependencies = [
    "fastapi>=0.110",       # agnostic API surface (POST /run) — ADR-002 §3.2
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex_runtime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
